--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <!-- airpub configs -->
     <script>
       var airpubConfigs = {        
-        name: 'Airpub', // 博客名称
-        description: 'Just another Airpub blog', // 博客描述
+        name: '马克锅', // 博客名称
+        description: 'Mark Life', // 博客描述
         url: 'http://your-uri', // 博客站点永久链接
         theme: 'chill/0.3.0', // 当前主题与主题版本（如无版本可省略为：`chill`）
         themePath: 'http://static.duoshuo.com/airpub/themes', // 博客主题根目录
         upyun: { // 用于上传图片
-          bucket: 'mybucket', // 又拍云 bucket 配置 (可选)
+          bucket: 'blog-airpub.b0.upaiyun.com', // 又拍云 bucket 配置 (可选)
           form_api_secret: 'xxxxxx' // 又拍云 form_api_secret (可选)
         }
       };
       var duoshuoQuery = {
-        short_name: 'your_duoshuo_short_name' // 修改成你的多说 short_name
+        short_name: 'MarkGuo' // 修改成你的多说 short_name
       };
     </script>
     <!-- duoshuo embed js -->
