--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       var airpubConfigs = {        
         name: '马克锅', // 博客名称
         description: 'Mark Life', // 博客描述
-        url: 'http://markgzw.github.io/index.html', // 博客站点永久链接
+        url: 'http://markgzw.github.io', // 博客站点永久链接
         theme: 'chill/0.3.0', // 当前主题与主题版本（如无版本可省略为：`chill`）
         themePath: 'http://static.duoshuo.com/airpub/themes', // 博客主题根目录
         upyun: { // 用于上传图片
